--- a/Api-Gateway/src/main/resources/application.yml
+++ b/Api-Gateway/src/main/resources/application.yml
@@ -14,4 +14,8 @@ zuul:  prefix: /api
            service-id: STOCK-PRICE-SERVICE
     calculationservice:
            path: /calculation/**
-           service-id: STOCK-CALCULATION-SERVICE       
+           service-id: STOCK-CALCULATION-SERVICE 
+    uinservice:
+           path: /ui/**
+           service-id: STOCK-UI-SERVICE
+                 
